<resources>
    <string name="app_name">Auth App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="header3">Log in to your account</string>
    <string name="backgroundDescription">Background Image</string>
    <string name="iconDescription">Icon Image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgetpassword">Forgetpassword?</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hava_a_problem">Hava a problem?</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_out">Log out</string>
    <string name="gander">Gander</string>
</resources>