<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.MainActivity">

            <ImageView
                android:id="@+id/backgroundImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/background"
                android:contentDescription="@string/backgroundDescription"/>

            <ImageView
                android:id="@+id/iconImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="155dp"
                android:layout_marginTop="132dp"
                android:layout_marginEnd="150dp"
                app:srcCompat="@drawable/icon"
                android:contentDescription="@string/iconDescription"/>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="273dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:text="@string/create_new_account"
                    android:textColor="@color/large_text"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/username"
                    android:textColor="@color/small_text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_border"
                    android:drawableEnd="@drawable/x_icon"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/email"
                    android:textColor="@color/small_text"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_border"
                    android:drawableEnd="@drawable/x_icon"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="68dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/password"
                    android:textColor="@color/small_text"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_border"
                    android:drawableEnd="@drawable/hide_icon"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    tools:ignore="LabelFor,TextFields" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="0dp"
                        android:layout_height="17dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter_bold"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/remember_me"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/hava_a_problem"
                        android:textColor="@color/large_text"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <Button
                    android:id="@+id/register_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/btn"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/large_text" />

                    <TextView
                        android:id="@+id/logIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/inter_bold"
                        android:paddingStart="10dp"
                        android:text="@string/log_in"
                        android:textColor="@color/large_text"
                        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>