<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.MainActivity">

            <ImageView
                android:id="@+id/backgroundImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/background"
                android:contentDescription="@string/backgroundDescription"/>

            <ImageView
                android:id="@+id/iconImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="155dp"
                android:layout_marginTop="132dp"
                android:layout_marginEnd="150dp"
                android:contentDescription="@string/iconDescription"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="273dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center"
                    android:text="Ahmed AbuFoda"
                    android:textColor="@color/large_text"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/username"
                    android:textColor="@color/small_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/email"
                    android:textColor="@color/small_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="49dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/gander"
                    android:textColor="@color/small_text"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/gander"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/logOut"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/btn2"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/log_out"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>